sfSandBoxCode/force-app/main/default/objects/Sensor_Data_Weights__c/Sensor_Data_Weights__c.object-meta.xml
<CustomObject>
    <description>Store waste data weighed using sensor</description>
    <label>Sensor  Data Weights</label>
    <nameField>
        <label>Sensor Weights Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sensor Data Weights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>