sfSandBoxCode/force-app/main/default/objects/Sensor_Data_Weights__c/fields/Date_of_Exits__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Exits__c</fullName>
    <label>Date of Exits</label>
    <type>Date</type>
</CustomField>