sfSandBoxCode/force-app/main/default/objects/Sensor_Data_Weights__c/fields/Feces_Kg__c.field-meta.xml
<CustomField>
    <fullName>Feces_Kg__c</fullName>
    <label>Feces(Kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>