sfSandBoxCode/force-app/main/default/objects/Sensor_Data_Weights__c/fields/Toilet__c.field-meta.xml
<CustomField>
    <fullName>Toilet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Toilet</label>
    <referenceTo>Toilet__c</referenceTo>
    <relationshipLabel>Sensor Data Weights</relationshipLabel>
    <relationshipName>Sensor_Data_Weights</relationshipName>
    <type>Lookup</type>
</CustomField>