sfSandBoxCode/force-app/main/default/objects/Sensor_Data_Weights__c/recordTypes/Sensor_Data_Weights.recordType-meta.xml
<RecordType>
    <fullName>Sensor_Data_Weights</fullName>
    <active>true</active>
    <label>Sensor Data Weights</label>
</RecordType>