sfSandBoxCode/force-app/main/default/objects/Sensor_Data_Weights__c/recordTypes/Sensor_Exits.recordType-meta.xml
<RecordType>
    <fullName>Sensor_Exits</fullName>
    <active>true</active>
    <label>Sensor Exits</label>
</RecordType>