sfSandBoxCode/force-app/main/default/objects/Sensor_Data_Weights__c/listViews/Sensor_Data_Collection_Weights.listView-meta.xml
<ListView>
    <fullName>Sensor_Data_Collection_Weights</fullName>
    <columns>NAME</columns>
    <columns>Toilet__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sensor_Data_Weights__c.Sensor_Data_Weights</value>
    </filters>
    <label>Sensor Data Collection Weights</label>
    <language>en_US</language>
</ListView>